# blackbird

./: .dockerignore  .env  .gitignore  Dockerfile  MANIFEST.in  Procfile  README (1).md  README.md  SUMMARY.md  advanced-usage.md  app.py  blackbird-gui.py  blackbird.py  blackbird_v2.py  blackbirdv2.py  correctJson.py  crow.py  data.json  enum-username.py  jsonSchemas.py  procfile  pyproject.toml  requirements.txt  requirements_AI.txt  useragents.txt  web.py  webserver.py  wmn-data.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  new-site-suggestion.md
.github/worflows/: python-test.yaml
.github/workflows/: auto-close-issues.yaml  python-test.yaml
assets/text/: splash.txt
blackbird/: blackbird.py  data.json
blackbird/templates/: asset-manifest.json
data/: email-data.json  useragents.txt  wmn-metadata.json
docs/: README.md  SUMMARY.md  advanced-usage.md  ai.md  basic-usage.md  getting-started.md  use-cases.md
results/: example.json  padrino.json  sampzzz.json  username.json
src/: config.py  core.py  scheme.py  service.py
src/modules/ai/: client.py  key_manager.py
src/modules/core/: email.py  main.py  username.py
src/modules/export/: csv.py  dump.py  file_operations.py  html.py  json.py  pdf.py
src/modules/ner/: entity_extraction.py
src/modules/sites/: instagram.py
src/modules/utils/: file_operations.py  filter.py  hash.py  http_client.py  input.py  log.py  parse.py  permute.py  precheck.py  userAgent.py
src/modules/whatsmyname/: list_operations.py
templates/: asset-manifest.json  index.html
templates/static/css/: main.080b0764.css  main.080b0764.css.map  main.0d04f6ff.css  main.0d04f6ff.css.map  main.369f02f7.css  main.369f02f7.css.map  main.736a3b94.css  main.736a3b94.css.map  main.7b3194b6.chunk.css  main.7b3194b6.chunk.css.map  main.8b258144.css  main.8b258144.css.map  main.9de24a0c.css  main.9de24a0c.css.map  main.a550d771.css  main.a550d771.css.map  main.aa9d1193.chunk.css  main.cdf9b795.chunk.css  main.cdf9b795.chunk.css.map  main.d709f85b.css  main.d709f85b.css.map  main.d7154081.css
templates/static/js/: 2.4e435aa4.chunk.js  2.ea10ef80.chunk.js  2.fae74078.chunk.js  2.fae74078.chunk.js.LICENSE.txt  main.01633e29.chunk.js  main.0b13b276.chunk.js.map  (+59 more)
tests/: test_core.py  test_export.py
tests/data/: mock-email.json  mock-username.json
(+27 files in other folders)
